_infrastructure/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    # https://github.com/kubernetes/ingress-nginx/blob/main/docs/user-guide/nginx-configuration/annotations.md
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - secretName: my-ssl-cert
      hosts:
        - thing-docs-working.managemc.com
  rules:
    - host: thing-docs-working.managemc.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: thing-docs-working
              port:
                number: 8080
    - host: thing-docs-bad.managemc.com
      http:
        paths:
        - pathType: Prefix
          path: "/docs"
          backend:
            service:
              name: thing-docs-bad
              port:
                number: 8081
